--- a/simplyOrganicsAngular/src/app/admin/components/app-sidebar/app-sidebar.component.html
+++ b/simplyOrganicsAngular/src/app/admin/components/app-sidebar/app-sidebar.component.html
@@ -1,47 +1,50 @@
 <div id="sidebar-collapse">
   <ul class="side-menu">
       <li routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
-        <a href="javascript:;"><i class="sidebar-item-icon ti-home"></i><span class="nav-label">Dashboards</span></a>
+        <a href="javascript:;">
+          <i class="sidebar-item-icon ti-home"></i>
+          <span class="nav-label">Dashboards</span>
+        </a>
         <div class="nav-2-level">
           <ul>
-            <li><a routerLink="" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Dashboard v1</a>
+            <li><a routerLink="/admin/home" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Dashboard v1</a>
             </li>
-            <li><a routerLink="/dashboard_2" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Dashboard v2</a>
+            <li><a routerLink="/admin/dashboard_2" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Dashboard v2</a>
             </li>
-            <li><a routerLink="/dashboard_3" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Dashboard v3</a>
+            <li><a routerLink="/admin/dashboard_3" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Dashboard v3</a>
             </li>
-            <li><a routerLink="/dashboard_4" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Dashboard v4</a>
+            <li><a routerLink="/admin/dashboard_4" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Dashboard v4</a>
             </li>
-            <li><a routerLink="/dashboard_5" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Dashboard v5</a>
+            <li><a routerLink="/admin/dashboard_5" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Dashboard v5</a>
             </li>
           </ul>
         </div>
       </li>
-      <li routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"><a routerLink="/datatable"><i class="sidebar-item-icon ti-layers-alt"></i><span class="nav-label">Datatables</span></a></li>
+      <li routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"><a routerLink="/admin/datatable"><i class="sidebar-item-icon ti-layers-alt"></i><span class="nav-label">Datatables</span></a></li>
       <li routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"><a href="javascript:;"><i class="sidebar-item-icon ti-bar-chart"></i><span class="nav-label">Charts</span></a>
         <div class="nav-2-level">
           <ul>
-            <li><a routerLink="/chartjs" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Chart.js</a>
+            <li><a routerLink="/admin/chartjs" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Chart.js</a>
             </li>
-            <li><a routerLink="/charts-morris" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Morris Charts</a>
+            <li><a routerLink="/admin/charts-morris" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Morris Charts</a>
             </li>
-            <li><a routerLink="/charts-peity" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Peity Charts</a>
+            <li><a routerLink="/admin/charts-peity" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Peity Charts</a>
             </li>
-            <li><a routerLink="/charts-sparkline" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Sparkline Charts</a>
+            <li><a routerLink="/admin/charts-sparkline" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Sparkline Charts</a>
             </li>
           </ul>
         </div>
       </li>
-      <li routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"><a routerLink="/widgets"><i class="sidebar-item-icon ti-layers-alt"></i><span class="nav-label">Widgets</span></a></li>
-      <li routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"><a routerLink="/icons"><i class="sidebar-item-icon ti-face-smile"></i><span class="nav-label">Icons</span></a></li>
+      <li routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"><a routerLink="/admin/widgets"><i class="sidebar-item-icon ti-layers-alt"></i><span class="nav-label">Widgets</span></a></li>
+      <li routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"><a routerLink="/admin/icons"><i class="sidebar-item-icon ti-face-smile"></i><span class="nav-label">Icons</span></a></li>
       <li routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"><a href="javascript:;"><i class="sidebar-item-icon ti-email"></i><span class="nav-label">Mailbox</span></a>
         <div class="nav-2-level">
           <ul>
-            <li><a routerLink="/mailbox" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Inbox</a>
+            <li><a routerLink="/admin/mailbox" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Inbox</a>
             </li>
-            <li><a routerLink="/mail_view" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Mail view</a>
+            <li><a routerLink="/admin/mail_view" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Mail view</a>
             </li>
-            <li><a routerLink="/mail_compose" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Compose mail</a>
+            <li><a routerLink="/admin/mail_compose" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Compose mail</a>
             </li>
           </ul>
         </div>
@@ -49,9 +52,9 @@
       <li routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"><a href="javascript:;"><i class="sidebar-item-icon ti-pencil"></i><span class="nav-label">Blog</span></a>
         <div class="nav-2-level">
           <ul>
-            <li><a routerLink="/blog" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">List</a>
+            <li><a routerLink="/admin/blog" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">List</a>
             </li>
-            <li><a routerLink="/article" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Article</a>
+            <li><a routerLink="/admin/article" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Article</a>
             </li>
           </ul>
         </div>
@@ -59,11 +62,11 @@
       <li routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"><a href="javascript:;"><i class="sidebar-item-icon ti-shopping-cart"></i><span class="nav-label">E-Commerce</span></a>
         <div class="nav-2-level">
           <ul>
-            <li><a routerLink="/ecommerce_products_board" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Products board</a>
+            <li><a routerLink="/admin/ecommerce_products_board" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Products board</a>
             </li>
-            <li><a routerLink="/ecommerce_products_list" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Products list</a>
+            <li><a routerLink="/admin/ecommerce_products_list" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Products list</a>
             </li>
-            <li><a routerLink="/ecommerce_products_edit" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Product edit</a>
+            <li><a routerLink="/admin/ecommerce_products_edit" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Product edit</a>
             </li>
           </ul>
         </div>
@@ -71,31 +74,31 @@
       <li routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"><a href="javascript:;"><i class="sidebar-item-icon ti-files"></i><span class="nav-label">Pages</span></a>
         <div class="nav-2-level">
           <ul>
-            <li><a routerLink="/invoice" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Invoice</a>
+            <li><a routerLink="/admin/invoice" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Invoice</a>
             </li>
-            <li><a routerLink="/timeline" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Timeline</a>
+            <li><a routerLink="/admin/timeline" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Timeline</a>
             </li>
-            <li><a routerLink="/faq" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">FAQ</a>
+            <li><a routerLink="/admin/faq" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">FAQ</a>
             </li>
-            <li><a routerLink="/search" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Search</a>
+            <li><a routerLink="/admin/search" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Search</a>
             </li>
-            <li><a routerLink="/profile" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Profile</a>
+            <li><a routerLink="/admin/profile" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Profile</a>
             </li>
-            <li><a routerLink="/login" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Login</a>
+            <li><a routerLink="/admin/login" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Login</a>
             </li>
-            <li><a routerLink="/login_dark" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Login dark</a>
+            <li><a routerLink="/admin/login_dark" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Login dark</a>
             </li>
-            <li><a routerLink="/register" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Register</a>
+            <li><a routerLink="/admin/register" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Register</a>
             </li>
-            <li><a routerLink="/register_dark" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Register dark</a>
+            <li><a routerLink="/admin/register_dark" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Register dark</a>
             </li>
-            <li><a routerLink="/lockscreen" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Lockscreen</a>
+            <li><a routerLink="/admin/lockscreen" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Lockscreen</a>
             </li>
-            <li><a routerLink="/forgot_password" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Forgot password</a>
+            <li><a routerLink="/admin/forgot_password" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Forgot password</a>
             </li>
-            <li><a routerLink="/error_404" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">404 error</a>
+            <li><a routerLink="/admin/error_404" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">404 error</a>
             </li>
-            <li><a routerLink="/error_500" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">500 error</a>
+            <li><a routerLink="/admin/error_500" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">500 error</a>
             </li>
           </ul>
         </div>
