--- a/simplyOrganicsAngular/src/app/admin/components/app-sidebar/app-sidebar.component.html
+++ b/simplyOrganicsAngular/src/app/admin/components/app-sidebar/app-sidebar.component.html
@@ -2,19 +2,15 @@
   <ul class="side-menu">
       
      <!--  Dashboard -->
-      <li routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"><a routerLink="/admin/home"><i class="sidebar-item-icon ti-home"></i><span class="nav-label">Dashboard</span></a></li>
+      <li routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"><a routerLink="/admin/dashboard"><i class="sidebar-item-icon ti-home"></i><span class="nav-label">Dashboard</span></a></li>
       
       <!--  Customers -->
       <li routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"><a href="javascript:;"><i class="sidebar-item-icon ti-bar-chart"></i><span class="nav-label">Customers</span></a>
         <div class="nav-2-level">
           <ul>
-            <li><a routerLink="/admin/customer_edit" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">View</a>
+            <li><a routerLink="/admin/customerlist" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">View List</a>
             </li>
-            <li><a routerLink="/admin/charts-morris" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Add Customer</a>
-            </li>
-            <li><a routerLink="/admin/charts-peity" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Peity Charts</a>
-            </li>
-            <li><a routerLink="/admin/charts-sparkline" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Sparkline Charts</a>
+            <li><a routerLink="/admin/customeredit" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Add Customer</a>
             </li>
           </ul>
         </div>
@@ -40,14 +36,11 @@
        <li routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"><a href="javascript:;"><i class="sidebar-item-icon ti-bar-chart"></i><span class="nav-label">Products</span></a>
         <div class="nav-2-level">
           <ul>
-            <li><a routerLink="/admin/chartjs" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Chart.js</a>
+            <li><a routerLink="/admin/productlist" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">View List</a>
             </li>
-            <li><a routerLink="/admin/charts-morris" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Morris Charts</a>
+            <li><a routerLink="/admin/productedit" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Edit Products</a>
             </li>
-            <li><a routerLink="/admin/charts-peity" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Peity Charts</a>
-            </li>
-            <li><a routerLink="/admin/charts-sparkline" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Sparkline Charts</a>
-            </li>
+            
           </ul>
         </div>
       </li>
