inventory customer list

--- a/simplyOrganicsAngular/src/app/admin/components/app-sidebar/app-sidebar.component.html
+++ b/simplyOrganicsAngular/src/app/admin/components/app-sidebar/app-sidebar.component.html
@@ -78,17 +78,14 @@
       </li>
 
       <!--  Inventory -->
-      <li routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"><a href="javascript:;"><i class="sidebar-item-icon ti-bar-chart"></i><span class="nav-label">Inventory</span></a>
+      <li routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"><a routerLink="/inventory"></a><a href="javascript:;"><i class="sidebar-item-icon ti-bar-chart"></i><span class="nav-label">Inventory</span></a>
         <div class="nav-2-level">
           <ul>
-            <li><a routerLink="/admin/chartjs" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Chart.js</a>
+            <li><a routerLink="/admin/inventory" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">View Inventory</a>
             </li>
-            <li><a routerLink="/admin/charts-morris" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Morris Charts</a>
+            <li><a routerLink="/admin/inventory" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Edit Inventory</a>
             </li>
-            <li><a routerLink="/admin/charts-peity" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Peity Charts</a>
-            </li>
-            <li><a routerLink="/admin/charts-sparkline" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Sparkline Charts</a>
-            </li>
+            
           </ul>
         </div>
       </li>
