--- a/simplyOrganicsAngular/src/app/customer-list/customer-list.component.html
+++ b/simplyOrganicsAngular/src/app/customer-list/customer-list.component.html
@@ -1,3 +1,33 @@
-<p>
-  customer-list works!
-</p>
+<div class="page-heading">
+  <h1 class="page-title">Customer List</h1>
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+    <li class="breadcrumb-item active">Customer List</li>
+  </ol>
+</div>
+<div class="page-content fade-in-up">
+  <div class="ibox">
+    <div class="ibox-body">
+      <div class="table-responsive">
+        <table class="table table-striped table-bordered table-hover" id="example-table">
+          <thead>
+            <tr>
+              <th *ngFor="let column of columns">{{column.header}}</th>
+            </tr>
+          </thead>
+
+          <tbody *ngFor="let row of dataset">
+              <tr>
+                <td *ngFor="let column of columns">{{row[column.value]}}</td>
+                <td>
+                    <button class="btn btn-default btn-sm btn-flat" data-toggle="tooltip" data-original-title="Edit"><i class="fa fa-pencil font-14"></i></button>
+                    <button class="btn btn-default btn-sm btn-flat" data-toggle="tooltip" data-original-title="Delete"><i class="fa fa-trash font-14"></i></button>
+                  </td>
+                  </tr>
+                </tbody>
+
+        </table>
+      </div>
+    </div>
+  </div>
+</div>
