product edit form

--- a/simplyOrganicsAngular/src/app/admin/components/app-footer/app-footer.component.html
+++ b/simplyOrganicsAngular/src/app/admin/components/app-footer/app-footer.component.html
@@ -1,1 +1,1 @@
-<div class="pull-right"><a class="link-blue" href="javascript:;"><i class="fa fa-shopping-cart m-r-5"></i>Buy now</a></div>2017 © <b>Adminca</b> - Save your time, choose the best
+<!-- <div class="pull-right"><a class="link-blue" href="javascript:;"><i class="fa fa-shopping-cart m-r-5"></i>Buy now</a></div>2017 © <b>Adminca</b> - Save your time, choose the best -->
