--- a/simplyOrganicsAngular/src/app/admin/components/app-sidebar/app-sidebar.component.html
+++ b/simplyOrganicsAngular/src/app/admin/components/app-sidebar/app-sidebar.component.html
@@ -24,10 +24,7 @@
             </li>
             <li><a routerLink="/admin/charts-morris" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"> Add Salesperson</a>
             </li>
-            <li><a routerLink="/admin/charts-peity" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Peity Charts</a>
-            </li>
-            <li><a routerLink="/admin/charts-sparkline" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Sparkline Charts</a>
-            </li>
+           
           </ul>
         </div>
       </li>
@@ -49,13 +46,9 @@
        <li routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"><a href="javascript:;"><i class="sidebar-item-icon ti-bar-chart"></i><span class="nav-label">Locations</span></a>
         <div class="nav-2-level">
           <ul>
-            <li><a routerLink="/admin/chartjs" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Chart.js</a>
+            <li><a routerLink="/admin/chartjs" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">View Locations</a>
             </li>
-            <li><a routerLink="/admin/charts-morris" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Morris Charts</a>
-            </li>
-            <li><a routerLink="/admin/charts-peity" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Peity Charts</a>
-            </li>
-            <li><a routerLink="/admin/charts-sparkline" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Sparkline Charts</a>
+            <li><a routerLink="/admin/charts-morris" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Add Location</a>
             </li>
           </ul>
         </div>
@@ -63,18 +56,7 @@
      
       <!--  Orders -->
       <li routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"><a href="javascript:;"><i class="sidebar-item-icon ti-bar-chart"></i><span class="nav-label">Orders</span></a>
-        <div class="nav-2-level">
-          <ul>
-            <li><a routerLink="/admin/chartjs" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Chart.js</a>
-            </li>
-            <li><a routerLink="/admin/charts-morris" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Morris Charts</a>
-            </li>
-            <li><a routerLink="/admin/charts-peity" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Peity Charts</a>
-            </li>
-            <li><a routerLink="/admin/charts-sparkline" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Sparkline Charts</a>
-            </li>
-          </ul>
-        </div>
+       
       </li>
 
       <!--  Inventory -->
@@ -92,18 +74,7 @@
      
       <!--  Adminstrators -->
       <li routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"><a href="javascript:;"><i class="sidebar-item-icon ti-bar-chart"></i><span class="nav-label">Administrators</span></a>
-        <div class="nav-2-level">
-          <ul>
-            <li><a routerLink="/admin/chartjs" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Chart.js</a>
-            </li>
-            <li><a routerLink="/admin/charts-morris" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Morris Charts</a>
-            </li>
-            <li><a routerLink="/admin/charts-peity" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Peity Charts</a>
-            </li>
-            <li><a routerLink="/admin/charts-sparkline" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Sparkline Charts</a>
-            </li>
-          </ul>
-        </div>
+        
       </li>
 
   </ul>
