--- a/simplyOrganicsAngular/src/app/admin/pages/article/article.component.html
+++ b/simplyOrganicsAngular/src/app/admin/pages/article/article.component.html
@@ -15,7 +15,7 @@
             <div class="article-share"><a href="#"><i class="fa fa-facebook"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-linkedin"></i></a><a href="#"><i class="fa fa-pinterest"></i></a></div>
           </div>
           <div class="text-center">
-            <h1 class="article-title" style="margin: 40px 0;">Adminca: Basic usage</h1>
+            <h1 class="article-title" style="margin: 40px 0;">: Basic usage</h1>
           </div>
           <p>Nulla vestibulum interdum imperdiet. Fusce sit amet erat quis erat rhoncus venenatis et non ipsum. Suspendisse sed velit consequat, pretium dolor vel, vestibulum massa. In tempor iaculis vehicula. <b>Duis pellentesque urna lectus</b>, id lacinia eros lacinia non. Curabitur fermentum pretium erat, eu aliquet tortor tincidunt vel. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
           <p><span class="text-success">Fusce et quam</span> tristique, congue tellus sed, suscipit tellus. In quis placerat magna. Nunc blandit nulla id orci auctor vulputate. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Maecenas luctus rutrum erat sit amet pulvinar. Integer sit amet mollis ante, feugiat laoreet neque. Maecenas tincidunt sed orci eu euismod. Integer a turpis vestibulum, venenatis mi id, suscipit ex. Nam iaculis nulla a dictum dapibus. Vivamus volutpat convallis leo. Nam blandit justo sed sapien varius bibendum ut id nunc. In gravida, leo ac tristique fringilla, diam nunc consequat metus, eget faucibus lorem ligula quis erat. Phasellus rutrum pharetra felis eget commodo.</p>
