--- a/simplyOrganicsAngular/src/app/admin/pages/invoice/invoice.component.html
+++ b/simplyOrganicsAngular/src/app/admin/pages/invoice/invoice.component.html
@@ -17,7 +17,7 @@
             <div>Vue JS, Inc.</div>
             <ul class="list-unstyled m-t-10">
               <li class="m-b-5"><span class="font-strong">A:</span> San Francisco, CA 94103 Market Street</li>
-              <li class="m-b-5"><span class="font-strong">W:</span> adminca@exmail.com</li>
+              <li class="m-b-5"><span class="font-strong">W:</span> admin@exmail.com</li>
               <li><span class="font-strong">P:</span> (123) 456-2112</li>
             </ul>
           </div>
