--- a/simplyOrganicsAngular/src/app/admin/pages/lockscreen/lockscreen.component.html
+++ b/simplyOrganicsAngular/src/app/admin/pages/lockscreen/lockscreen.component.html
@@ -1,5 +1,5 @@
 <div class="content">
-  <div class="brand"><a class="link" routerLink="/index">AdminCa</a></div>
+  <div class="brand"><a class="link" routerLink="/index"></a></div>
   <div class="ibox">
     <div class="lock-header m-b-20">Locked screen</div>
     <div class="ibox-body">
@@ -19,5 +19,5 @@
       </div>
     </div>
   </div>
-  <div class="font-13 text-center text-white m-t-10 m-b-10">AdminCa. Save your time. Choose the best © 2017</div>
+  <div class="font-13 text-center text-white m-t-10 m-b-10">. Save your time. Choose the best © 2017</div>
 </div>
