--- a/simplyOrganicsAngular/src/app/admin/pages/search/search.component.html
+++ b/simplyOrganicsAngular/src/app/admin/pages/search/search.component.html
@@ -8,7 +8,7 @@
 <div class="page-content fade-in-up">
   <div class="card border-0 m-b-20">
     <div class="card-body">
-      <h3 class="m-t-5">1,780 results found for: <span class="text-info">“AdminCa Theme”</span></h3><small class="text-muted">About 1,370 result ( 0.13 seconds)</small>
+      <h3 class="m-t-5">1,780 results found for: <span class="text-info">“”</span></h3><small class="text-muted">About 1,370 result ( 0.13 seconds)</small>
       <div class="input-group m-t-10">
         <div class="input-group-btn">
           <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">Everything <i class="fa fa-angle-down"></i></button>
@@ -24,27 +24,27 @@
   <div class="ibox search-results">
     <div class="ibox-body">
       <div class="search-result">
-        <h5><a class="link-blue">Adminca: Perfect Programming</a></h5>
+        <h5><a class="link-blue">: Perfect Programming</a></h5>
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy.</p>
         <div class="text-muted"><span class="badge badge-danger">Laravel</span> • <span>OCT 25, 2018</span></div>
       </div>
       <div class="search-result">
-        <h5><a class="link-blue">Adminca: Perfect Programming</a></h5>
+        <h5><a class="link-blue">: Perfect Programming</a></h5>
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an typesetting industry. Lorem Ipsum has been the industry's standard dummy.</p>
         <div class="text-muted"><span class="badge badge-danger bg-purple">PHP</span> • <span>OCT 25, 2018</span></div>
       </div>
       <div class="search-result">
-        <h5><a class="link-blue">Adminca: Perfect Programming</a></h5>
+        <h5><a class="link-blue">: Perfect Programming</a></h5>
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an...</p>
         <div class="text-muted"><span class="badge badge-success">VUE</span> • <span>OCT 25, 2018</span></div>
       </div>
       <div class="search-result">
-        <h5><a class="link-blue">Adminca: Perfect Programming</a></h5>
+        <h5><a class="link-blue">: Perfect Programming</a></h5>
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's.</p>
         <div class="text-muted"><span class="badge badge-info">React</span> • <span>OCT 25, 2018</span></div>
       </div>
       <div class="search-result">
-        <h5><a class="link-blue">Adminca: Perfect Programming</a></h5>
+        <h5><a class="link-blue">: Perfect Programming</a></h5>
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an.</p>
         <div class="text-muted"><span class="badge badge-danger bg-purple">Bootstrap</span> • <span>OCT 25, 2018</span></div>
       </div>
