--- a/simplyOrganicsAngular/src/app/customer-list/customer-list.component.html
+++ b/simplyOrganicsAngular/src/app/customer-list/customer-list.component.html
@@ -2,7 +2,7 @@
   <h1 class="page-title">Customer List</h1>
   <ol class="breadcrumb">
     <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-    <li class="breadcrumb-item active">Customer List</li>
+    <li class="breadcrumb-item active">Customer Lgit ist</li>
   </ol>
 </div>
 <div class="page-content fade-in-up">
