--- a/simplyOrganicsAngular/src/app/admin/components/app-header/app-header.component.html
+++ b/simplyOrganicsAngular/src/app/admin/components/app-header/app-header.component.html
@@ -1,5 +1,5 @@
 
-<div class="page-brand"><a class="link" routerLink=""><span class="brand">Admin<span class="brand-tip">Ca</span></span><span class="brand-mini">AC</span></a></div>
+<div class="page-brand"><a class="link" routerLink=""><span class="brand">Admin<span class="brand-tip"></span></span><span class="brand-mini">AC</span></a></div>
 <!-- START TOP-LEFT TOOLBAR-->
 <ul class="nav pull-left navbar-toolbar">
   <li><a class="nav-link sidebar-toggler js-sidebar-toggler" (click)='this.UIService.toggleSidebar()'><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></a></li>
