--- a/simplyOrganicsAngular/src/app/admin/pages/forgot-password/forgot-password.component.html
+++ b/simplyOrganicsAngular/src/app/admin/pages/forgot-password/forgot-password.component.html
@@ -1,5 +1,5 @@
 <div class="content">
-  <div class="brand"><a class="link" routerLink="/index">AdminCa</a></div>
+  <div class="brand"><a class="link" routerLink="/index"></a></div>
   <form id="forgot-form" action="" method="post">
     <h3 class="m-t-10 m-b-10">Forgot password</h3>
     <p class="m-b-20">Enter your email address below and we'll send you password reset instructions.</p>
@@ -10,5 +10,5 @@
       <button class="btn btn-info btn-block" type="submit">Submit</button>
     </div>
   </form>
-  <div class="font-13 text-center text-white m-t-10 m-b-10">AdminCa. Save your time. Choose the best © 2017</div>
+  <div class="font-13 text-center text-white m-t-10 m-b-10">. Save your time. Choose the best © 2017</div>
 </div>
