--- a/simplyOrganicsAngular/src/app/admin/pages/register-dark/register-dark.component.html
+++ b/simplyOrganicsAngular/src/app/admin/pages/register-dark/register-dark.component.html
@@ -1,5 +1,5 @@
 <div class="content">
-  <div class="brand"><a class="link" routerLink="/index">AdminCa</a></div>
+  <div class="brand"><a class="link" routerLink="/index"></a></div>
   <form id="register-form" action="" method="post">
     <div class="login-header d-flex justify-content-between"><a routerLink="/login_dark">Log In</a><a class="active">Sign Up</a></div>
     <h3 class="login-title">Sign Up</h3>
@@ -35,5 +35,5 @@
     <div class="social-auth-hr"><span>Or Sign up with</span></div>
     <div class="text-center social-auth"><a class="btn btn-default btn-circle btn-sm m-r-5" href="javascript:;"><i class="fa fa-twitter"></i></a><a class="btn btn-default btn-circle btn-sm m-r-5" href="javascript:;"><i class="fa fa-facebook"></i></a><a class="btn btn-default btn-circle btn-sm m-r-5" href="javascript:;"><i class="fa fa-google-plus"></i></a><a class="btn btn-default btn-circle btn-sm m-r-5" href="javascript:;"><i class="fa fa-linkedin"></i></a><a class="btn btn-default btn-circle btn-sm" href="javascript:;"><i class="fa fa-vk"></i></a></div>
   </form>
-  <div class="font-13 text-center m-t-10 m-b-10">AdminCa. Save your time. Choose the best © 2017</div>
+  <div class="font-13 text-center m-t-10 m-b-10">. Save your time. Choose the best © 2017</div>
 </div>
