--- a/simplyOrganicsAngular/src/app/admin/pages/register/register.component.html
+++ b/simplyOrganicsAngular/src/app/admin/pages/register/register.component.html
@@ -1,5 +1,5 @@
 <div class="content">
-  <div class="brand"><a class="link" routerLink="/index">AdminCa</a></div>
+  <div class="brand"><a class="link" routerLink="/index"></a></div>
   <form id="register-form" action="" method="post">
     <div class="text-center m-t-10"><span class="login-img"><i class="ti-check-box"></i></span></div>
     <h3 class="login-title">Sign Up</h3>
@@ -36,5 +36,5 @@
     <div class="text-center social-auth"><a class="btn btn-default btn-circle btn-sm m-r-5" href="javascript:;"><i class="fa fa-twitter"></i></a><a class="btn btn-default btn-circle btn-sm m-r-5" href="javascript:;"><i class="fa fa-facebook"></i></a><a class="btn btn-default btn-circle btn-sm m-r-5" href="javascript:;"><i class="fa fa-google-plus"></i></a><a class="btn btn-default btn-circle btn-sm m-r-5" href="javascript:;"><i class="fa fa-linkedin"></i></a><a class="btn btn-default btn-circle btn-sm"><i class="fa fa-vk"></i></a></div>
   </form>
   <div class="login-footer">Already a member? <a routerLink="/login" class="text-info">Login here</a></div>
-  <div class="font-13 text-center text-white m-t-10 m-b-10">AdminCa. Save your time. Choose the best © 2017</div>
+  <div class="font-13 text-center text-white m-t-10 m-b-10">. Save your time. Choose the best © 2017</div>
 </div>
