--- a/simplyOrganicsAngular/src/app/customer-edit/customer-edit.component.html
+++ b/simplyOrganicsAngular/src/app/customer-edit/customer-edit.component.html
@@ -1,4 +1,56 @@
-<section class="sample-app-content">
+<div class="page-heading">
+    <h1 class="page-title">Add Customer</h1>
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+      <li class="breadcrumb-item active">Add Customer</li>
+    </ol>
+</div>
+<div class="page-content fade-in-up">
+  <div class="ibox">
+    <div class="ibox-body">
+      <form [formGroup]="myForm" novalidate (ngSubmit)="save(myForm.value, myForm.valid)">
+        <ul class="nav nav-tabs tabs-line" style="margin-bottom:30px;">
+          <li class="nav-item"><a class="nav-link active" href="#tab-1" data-toggle="tab">General</a></li>
+          <li class="nav-item"><a class="nav-link" href="#tab-2" data-toggle="tab">Images</a></li>
+          <li class="nav-item"><a class="nav-link" href="#tab-3" data-toggle="tab">Discount</a></li>
+        </ul>
+        <div class="tab-content">
+          <div class="tab-pane fade show active" id="tab-1">
+            <div class="form-group row">
+              <label class="col-sm-2 col-form-label">First Name:</label>
+              <div class="col-sm-10">
+                <input class="form-control" placeholder="First Name" type="text" formControlName="first_name">
+              </div>
+            </div>
+            <div class="form-group row">
+              <label class="col-sm-2 col-form-label">Last Name:</label>
+              <div class="col-sm-10">
+                <input class="form-control" placeholder="Last Name" type="text" formControlName="last_name">
+              </div>
+            </div>
+          </div>
+        </div>
+          <button type="submit">Submit</button>
+      </form>
+    </div>
+  </div>    
+</div>            
+
+        <!-- We'll add our form controls here -->
+        <!-- <div>
+            <label> Product Title</label>
+            <input type="text" formControlName="title">
+            <small [hidden]="myForm.controls.title.valid || (myForm.controls.title.pristine && !submitted)">
+                Title is required (minimum 5 characters).
+            </small>
+        </div>
+        <div>
+            <label> Product Price</label>
+            <input type="text" formControlName="price">
+        </div>
+        <button type="submit">Submit</button> -->
+    
+<!-- <section class="sample-app-content">
     <h1>Model-based Form Example:</h1>
     <form [formGroup]="form" (ngSubmit)="onSubmit()">
         <p>
@@ -13,4 +65,4 @@
             <button type="submit" [disabled]="!form.valid">Submit</button>
         </p>
     </form>
-</section>
+</section> -->
