--- a/simplyOrganicsAngular/src/app/login/login.component.html
+++ b/simplyOrganicsAngular/src/app/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="content">
-    <div class="brand"><a class="link" routerLink="/index">AdminCa</a></div>
+    <div class="brand"><a class="link" routerLink="/index"></a></div>
     <form id="login-form" action="" method="post">
       <div class="login-header d-flex justify-content-between"><a class="active">Log In</a><a routerLink="/register_dark">Sign Up</a></div>
       <h3 class="login-title">Log in</h3>
@@ -20,6 +20,6 @@
       <div class="social-auth-hr"><span>Or login with</span></div>
       <div class="text-center social-auth"><a class="btn btn-default btn-circle btn-sm m-r-5" href="javascript:;"><i class="fa fa-twitter"></i></a><a class="btn btn-default btn-circle btn-sm m-r-5" href="javascript:;"><i class="fa fa-facebook"></i></a><a class="btn btn-default btn-circle btn-sm m-r-5" href="javascript:;"><i class="fa fa-google-plus"></i></a><a class="btn btn-default btn-circle btn-sm m-r-5" href="javascript:;"><i class="fa fa-linkedin"></i></a><a class="btn btn-default btn-circle btn-sm" href="javascript:;"><i class="fa fa-vk"></i></a></div>
     </form>
-    <div class="font-13 text-center m-t-10 m-b-10">AdminCa. Save your time. Choose the best © 2017</div>
+    <div class="font-13 text-center m-t-10 m-b-10">. Save your time. Choose the best © 2017</div>
   </div>
   
