--- a/simplyOrganicsAngular/src/app/product-edit/product-edit.component.html
+++ b/simplyOrganicsAngular/src/app/product-edit/product-edit.component.html
@@ -1,8 +1,8 @@
 <div class="page-heading">
-    <h1 class="page-title">E-commerce Products edit</h1>
+    <h1 class="page-title">Add Products</h1>
     <ol class="breadcrumb">
       <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-      <li class="breadcrumb-item active">E-commerce Products edit</li>
+      <li class="breadcrumb-item active">Add Products</li>
     </ol>
 </div>
 <div class="page-content fade-in-up">
@@ -11,8 +11,8 @@
       <form [formGroup]="myForm" novalidate (ngSubmit)="save(myForm.value, myForm.valid)">
         <ul class="nav nav-tabs tabs-line" style="margin-bottom:30px;">
           <li class="nav-item"><a class="nav-link active" href="#tab-1" data-toggle="tab">General</a></li>
-          <li class="nav-item"><a class="nav-link" href="#tab-2" data-toggle="tab">Images</a></li>
-          <li class="nav-item"><a class="nav-link" href="#tab-3" data-toggle="tab">Discount</a></li>
+          <!-- <li class="nav-item"><a class="nav-link" href="#tab-2" data-toggle="tab">Images</a></li>
+          <li class="nav-item"><a class="nav-link" href="#tab-3" data-toggle="tab">Discount</a></li> -->
         </ul>
         <div class="tab-content">
           <div class="tab-pane fade show active" id="tab-1">
@@ -23,9 +23,47 @@
               </div>
             </div>
             <div class="form-group row">
-              <label class="col-sm-2 col-form-label">Product price:</label>
+              <label class="col-sm-2 col-form-label">Product Category:</label>
               <div class="col-sm-10">
-                <input class="form-control" placeholder="Product price" type="text" formControlName="price">
+                <input class="form-control" placeholder="Product Category" type="text" formControlName="price">
+              </div>
+            </div>
+            <div class="form-group row">
+              <label class="col-sm-2 col-form-label">Measure</label>
+              <div class="col-sm-10">
+                <select class="form-control" formControlName="measure">
+                  <option>Kilogram</option>
+                  <option>Litre</option>
+                  <option>Gram</option>
+                </select>
+              </div>
+            </div>
+            <div class="form-group row">
+              <label class="col-sm-2 col-form-label">Quantity</label>
+              <div class="col-sm-10">
+                <input class="form-control" placeholder="Product Quantity" type="text" formControlName="price">
+              </div>
+            </div>
+            <div class="form-group row">
+              <label class="col-sm-2 col-form-label">Currency:</label>
+              <div class="col-sm-10">
+                <select class="form-control" formControlName="measure">
+                  <option>Rupee</option>
+                  <option>Dirham</option>
+                  <option>Dollar</option>
+                </select>
+              </div>
+            </div>
+            <div class="form-group row">
+              <label class="col-sm-2 col-form-label">Price:</label>
+              <div class="col-sm-10">
+                <input class="form-control" placeholder="Product Price" type="text" formControlName="price">
+              </div>
+            </div>
+            <div class="form-group row">
+              <label class="col-sm-2 col-form-label">Image:</label>
+              <div class="col-sm-10">
+                <input class="form-control" placeholder="Image" type="text" formControlName="price">
               </div>
             </div>
           </div>
