--- a/simplyOrganicsAngular/src/app/admin/components/app-sidebar/app-sidebar.component.html
+++ b/simplyOrganicsAngular/src/app/admin/components/app-sidebar/app-sidebar.component.html
@@ -20,9 +20,9 @@
        <li routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"><a href="javascript:;"><i class="sidebar-item-icon ti-bar-chart"></i><span class="nav-label">Salespeople</span></a>
         <div class="nav-2-level">
           <ul>
-            <li><a routerLink="/admin/chartjs" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">View</a>
+            <li><a routerLink="/admin/salespersonlist" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">View</a>
             </li>
-            <li><a routerLink="/admin/charts-morris" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"> Add Salesperson</a>
+            <li><a routerLink="/admin/salespersonedit" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"> Add Salesperson</a>
             </li>
            
           </ul>
