--- a/simplyOrganicsAngular/src/app/customer-list/customer-list.component.html
+++ b/simplyOrganicsAngular/src/app/customer-list/customer-list.component.html
@@ -1,4 +1,4 @@
-<div class="page-heading">
+<!-- <div class="page-heading">
   <h1 class="page-title">Customer List</h1>
   <ol class="breadcrumb">
     <li class="breadcrumb-item"><a href="index.html">Home</a></li>
@@ -30,4 +30,4 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
