ecommerce header added

--- a/simplyOrganicsAngular/src/app/admin/layouts/full-layout/full-layout.component.html
+++ b/simplyOrganicsAngular/src/app/admin/layouts/full-layout/full-layout.component.html
@@ -1,7 +1,7 @@
 <div class="page-wrapper">
     
     <!-- START HEADER-->
-    <header class="header clf" app-header></header>
+    <header class="header clf" admin-header></header>
     <!-- END HEADER-->
     
     <!-- START SIDEBAR-->
