--- a/simplyOrganicsAngular/src/app/admin/components/app-sidebar/app-sidebar.component.html
+++ b/simplyOrganicsAngular/src/app/admin/components/app-sidebar/app-sidebar.component.html
@@ -63,15 +63,28 @@
       <li routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"><a routerLink="/inventory"></a><a href="javascript:;"><i class="sidebar-item-icon ti-bar-chart"></i><span class="nav-label">Inventory</span></a>
         <div class="nav-2-level">
           <ul>
-            <li><a routerLink="/admin/inventory" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">View Inventory</a>
+            <li><a routerLink="/admin/inventoryview" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">View Inventory</a>
             </li>
-            <li><a routerLink="/admin/inventory" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Edit Inventory</a>
+            <li><a routerLink="/admin/inventoryedit" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Edit Inventory</a>
             </li>
             
           </ul>
         </div>
       </li>
      
+       <!--  Store -->
+       <li routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"><a routerLink="/inventory"></a><a href="javascript:;"><i class="sidebar-item-icon ti-bar-chart"></i><span class="nav-label">Store</span></a>
+        <div class="nav-2-level">
+          <ul>
+            <li><a routerLink="/admin/storeview" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">View Inventory</a>
+            </li>
+            <li><a routerLink="/admin/storeedit" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Edit Inventory</a>
+            </li>
+            
+          </ul>
+        </div>
+      </li>
+
       <!--  Adminstrators -->
       <li routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"><a href="javascript:;"><i class="sidebar-item-icon ti-bar-chart"></i><span class="nav-label">Administrators</span></a>
         
