--- a/simplyOrganicsAngular/src/app/customer-detail/customer-detail.component.html
+++ b/simplyOrganicsAngular/src/app/customer-detail/customer-detail.component.html
@@ -1,79 +1,132 @@
-<form [formGroup]="myForm" novalidate (ngSubmit)="update(myForm.value, myForm.valid)">
-  <div class="form-group">    
-    <label class="fontstyle1"><span class="fontstyle2">STEP2. </span>User Information</label>
-       <div class="form-group">
-          <label for="customerNameInput">First Name</label>  
-          <input type="text"  
+<div class="page-heading">
+    <h1 class="page-title">Product Details</h1>
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+      <li class="breadcrumb-item active">Product Details</li>
+    </ol>
+  </div>
+  <div class="page-content fade-in-up">
+    <div class="ibox">
+      <div class="ibox-body">
+        <form class="form-horizontal" action="javascript:;" [formGroup]="myForm" novalidate (ngSubmit)="update(myForm.value, myForm.valid)">
+  <div class="form-group"> 
+      <div class="form-group">
+          
+      <div class="form-group row">
+          <label class="col-sm-2 col-form-label">First Name</label>  
+          <div class="col-sm-10">
+            <input  class="form-control" type="text"  
                  id="customerNameInput"  
                  placeholder="customer Name"  
-                 formControlName="f_name"
-          >
-          <label for="customerNameInput">Last Name</label>  
-          <input type="text"  
-                 id="customerNameInput"  
-                 placeholder="customer Name"  
-                 formControlName="l_name"
-          >
-          <label for="customerNameInput">Email</label>  
-          <input type="text"  
-                 id="customerNameInput"  
-                 placeholder="customer Name"  
-                 formControlName="email"
-          >
-          <label for="customerNameInput">Contact</label>  
-          <input type="text"  
-                 id="customerNameInput"  
-                 placeholder="customer Name"  
-                 formControlName="contact"
-          >
-          <label for="customerNameInput">Address</label>  
-          <input type="text"  
-                 id="customerNameInput"  
-                 placeholder="customer Name"  
-                 formControlName="address"
-          >
-          <label for="customerNameInput">Landmark</label>  
-          <input type="text"  
-                 id="customerNameInput"  
-                 placeholder="customer Name"  
-                 formControlName="landmark"
-          >
-          <label for="customerNameInput">Pin Code</label>  
-          <input type="text"  
-                 id="customerNameInput"  
-                 placeholder="customer Name"  
-                 formControlName="pincode"
-          >
-          <label for="customerNameInput">City</label>  
-          <input type="text"  
-                 id="customerNameInput"  
-                 placeholder="customer Name"  
-                 formControlName="city_name"
-          >
-          <label for="customerNameInput">State</label>  
-          <input type="text"  
-                 id="customerNameInput"  
-                 placeholder="customer Name"  
-                 formControlName="state_name"
-          >
-          <label for="customerNameInput">Country</label>  
-          <input type="text"  
-                 id="customerNameInput"  
-                 placeholder="customer Name"  
-                 formControlName="country_name"
-          >
-          <label for="customerNameInput">Date Added</label>  
-          <input type="text"  
-                 id="customerNameInput"  
-                 placeholder="customer Name"  
-                 formControlName="dateAdded"
-          >
-          <label for="customerNameInput">Added By</label>  
-          <input type="text"  
-                 id="customerNameInput"  
-                 placeholder="customer Name"  
-                 formControlName="addedBy"
-          >
+                 formControlName="f_name">
+            </div>
+          </div> 
+
+          <div class="form-group row">
+              <label class="col-sm-2 col-form-label">Last Name</label>  
+              <div class="col-sm-10">
+                <input  class="form-control" type="text"  
+                     id="customerNameInput"  
+                     placeholder="customer Name"  
+                     formControlName="l_name">
+                </div>
+          </div> 
+
+          <div class="form-group row">
+              <label class="col-sm-2 col-form-label">Email</label>  
+              <div class="col-sm-10">
+                <input  class="form-control" type="text"  
+                     id="customerNameInput"  
+                     placeholder="customer Name"  
+                     formControlName="email">
+                </div>
+              </div> 
+
+          
+              <div class="form-group row">
+                  <label class="col-sm-2 col-form-label">Contact</label>  
+                  <div class="col-sm-10">
+                    <input  class="form-control" type="text"  
+                         id="customerNameInput"  
+                         placeholder="customer Name"  
+                         formControlName="contact">
+                    </div>
+                  </div> 
+
+                  <div class="form-group row">
+                      <label class="col-sm-2 col-form-label">Address</label>  
+                      <div class="col-sm-10">
+                        <input  class="form-control" type="text"  
+                             id="customerNameInput"  
+                             placeholder="customer Name"  
+                             formControlName="address">
+                        </div>
+                      </div> 
+
+                      <div class="form-group row">
+                          <label class="col-sm-2 col-form-label">Landmark</label>  
+                          <div class="col-sm-10">
+                            <input  class="form-control" type="text"  
+                                 id="customerNameInput"  
+                                 placeholder="customer Name"  
+                                 formControlName="landmark">
+                            </div>
+                          </div> 
+                          <div class="form-group row">
+                              <label class="col-sm-2 col-form-label">Pincode</label>  
+                              <div class="col-sm-10">
+                                <input  class="form-control" type="text"  
+                                     id="customerNameInput"  
+                                     placeholder="customer Name"  
+                                     formControlName="pincode">
+                                </div>
+                              </div> 
+                              <div class="form-group row">
+                                  <label class="col-sm-2 col-form-label">City</label>  
+                                  <div class="col-sm-10">
+                                    <input  class="form-control" type="text"  
+                                         id="customerNameInput"  
+                                         placeholder="customer Name"  
+                                         formControlName="city_name">
+                                    </div>
+                                  </div> 
+                                  <div class="form-group row">
+                                      <label class="col-sm-2 col-form-label">State</label>  
+                                      <div class="col-sm-10">
+                                        <input  class="form-control" type="text"  
+                                             id="customerNameInput"  
+                                             placeholder="customer Name"  
+                                             formControlName="state_name">
+                                        </div>
+                                      </div> 
+                                      <div class="form-group row">
+                                          <label class="col-sm-2 col-form-label">Country</label>  
+                                          <div class="col-sm-10">
+                                            <input  class="form-control" type="text"  
+                                                 id="customerNameInput"  
+                                                 placeholder="customer Name"  
+                                                 formControlName="country_name">
+                                            </div>
+                                          </div> 
+                                          <div class="form-group row">
+                                              <label class="col-sm-2 col-form-label">Date Added</label>  
+                                              <div class="col-sm-10">
+                                                <input  class="form-control" type="text"  
+                                                     id="customerNameInput"  
+                                                     placeholder="customer Name"  
+                                                     formControlName="dateAdded">
+                                                </div>
+                                              </div> 
+                                              <div class="form-group row">
+                                                  <label class="col-sm-2 col-form-label">Added By</label>  
+                                                  <div class="col-sm-10">
+                                                    <input  class="form-control" type="text"  
+                                                         id="customerNameInput"  
+                                                         placeholder="customer Name"  
+                                                         formControlName="addedBy">
+                                                    </div>
+                                                  </div> 
+         
        </div>
        
  
@@ -89,5 +142,8 @@
        <br>     -->
        <button type="submit" id="request-btn">Update</button>   
     
-  </div>
-</form>
+      </div>
+    </form>
+    </div>
+    </div>
+    </div>
