--- a/simplyOrganicsAngular/src/app/product-edit/product-edit.component.html
+++ b/simplyOrganicsAngular/src/app/product-edit/product-edit.component.html
@@ -17,55 +17,54 @@
         <div class="tab-content">
           <div class="tab-pane fade show active" id="tab-1">
             <div class="form-group row">
-              <label class="col-sm-2 col-form-label">Product Title:</label>
+              <label class="col-sm-2 col-form-label">Product Title</label>
               <div class="col-sm-10">
-                <input class="form-control" placeholder="Product name" type="text" formControlName="title">
+                <input class="form-control" placeholder="Product name" type="text" formControlName="prod_name">
               </div>
             </div>
             <div class="form-group row">
-              <label class="col-sm-2 col-form-label">Product Category:</label>
+              <label class="col-sm-2 col-form-label">Product Category</label>
               <div class="col-sm-10">
-                <input class="form-control" placeholder="Product Category" type="text" formControlName="price">
+                <input class="form-control" placeholder="Product Category" type="text" formControlName="prod_desc">
               </div>
             </div>
+            <div class="form-group row">
             <div class="form-group row">
               <label class="col-sm-2 col-form-label">Measure</label>
               <div class="col-sm-10">
-                <select class="form-control" formControlName="measure">
-                  <option>Kilogram</option>
-                  <option>Litre</option>
-                  <option>Gram</option>
+                <select class="form-control" formControlName="prod_measure">
+                  <option *ngFor="let measure of measures"
+                  [value]="measure.m_id">
+                     {{measure.m_name}}
+                </option>
                 </select>
               </div>
             </div>
             <div class="form-group row">
               <label class="col-sm-2 col-form-label">Quantity</label>
               <div class="col-sm-10">
-                <input class="form-control" placeholder="Product Quantity" type="text" formControlName="price">
+                <input class="form-control" placeholder="Product Quantity" type="text" formControlName="quant">
               </div>
             </div>
+            </div>
             <div class="form-group row">
-              <label class="col-sm-2 col-form-label">Currency:</label>
+              <label class="col-sm-2 col-form-label">Currency</label>
               <div class="col-sm-10">
-                <select class="form-control" formControlName="measure">
-                  <option>Rupee</option>
-                  <option>Dirham</option>
-                  <option>Dollar</option>
+                <select class="form-control" formControlName="prod_currency">
+                  <option *ngFor="let currency of currencies"
+                  [value]="currency.cur_id">
+                     {{currency.cur_name}}
+                </option>
                 </select>
               </div>
             </div>
             <div class="form-group row">
-              <label class="col-sm-2 col-form-label">Price:</label>
+              <label class="col-sm-2 col-form-label">Price</label>
               <div class="col-sm-10">
-                <input class="form-control" placeholder="Product Price" type="text" formControlName="price">
+                <input class="form-control" placeholder="Product Price" type="text" formControlName="prod_price">
               </div>
             </div>
-            <div class="form-group row">
-              <label class="col-sm-2 col-form-label">Image:</label>
-              <div class="col-sm-10">
-                <input class="form-control" placeholder="Image" type="text" formControlName="price">
-              </div>
-            </div>
+
           </div>
         </div>
           <button type="submit">Submit</button>
