footer home screen

--- a/simplyOrganicsAngular/src/app/admin/layouts/full-layout/full-layout.component.html
+++ b/simplyOrganicsAngular/src/app/admin/layouts/full-layout/full-layout.component.html
@@ -12,7 +12,7 @@
     	<!-- START PAGE CONTENT-->
         <router-outlet></router-outlet>
     	<!-- END PAGE CONTENT-->
-      <footer class="page-footer" app-footer></footer>
+      <footer class="page-footer" admin-footer></footer>
     </div>
 
 </div>
