--- a/simplyOrganicsAngular/src/assets/css/ecommerce/style.css
+++ b/simplyOrganicsAngular/src/assets/css/ecommerce/style.css
@@ -2852,7 +2852,7 @@ img.secondary-img {
 }
 .jtv-service-area {
 	text-align: left;
-	padding: 25px 0 5px;
+	padding: 25px 60px 25px;
 }
 .jtv-service-area .block-wrapper {
 	background: #407ac5;
