--- a/simplyOrganicsAngular/src/app/home/home.component.html
+++ b/simplyOrganicsAngular/src/app/home/home.component.html
@@ -1,3 +1,6 @@
+<div id="page"> 
 <app-header></app-header>
 <app-app-home-slider></app-app-home-slider>
+<app-app-service-section></app-app-service-section>
 <app-footer></app-footer>
+</div>
