product image upload

--- a/simplyOrganicsAngular/src/app/app-shop/app-shop.component.html
+++ b/simplyOrganicsAngular/src/app/app-shop/app-shop.component.html
@@ -576,8 +576,8 @@
                       <div class="pr-img-area">
                         <a title="Ipsums Dolors Untra" href="single_product.html">
                           <figure>
-                            <img class="first-img" src="images/products/img01.jpg" alt="">
-                            <img class="hover-img" src="images/products/img01.jpg" alt="">
+                            <img class="first-img" src="../../assets/img/ecommerce/honey.jpg" alt="">
+                            <img class="hover-img" src="../../assets/img/ecommerce/honey.jpg" alt="">
                           </figure>
                         </a>
                         <button type="button" class="add-to-cart-mt">
@@ -585,6 +585,7 @@
                           <span> Add to Cart</span>
                         </button>
                       </div>
+                     
                       <div class="pr-info-area">
                         <div class="pr-button">
                           <div class="mt-button add_to_wishlist">
@@ -638,8 +639,8 @@
                       <div class="pr-img-area">
                         <a title="Ipsums Dolors Untra" href="single_product.html">
                           <figure>
-                            <img class="first-img" src="images/products/img01.jpg" alt="">
-                            <img class="hover-img" src="images/products/img01.jpg" alt="">
+                            <img class="first-img" src="../../assets/img/ecommerce/honey.jpg" alt="">
+                            <img class="hover-img" src="../../assets/img/ecommerce/honey.jpg" alt="">
                           </figure>
                         </a>
                         <button type="button" class="add-to-cart-mt">
